# flashy

./: .gitignore  Cargo.toml
.sqlx/: query-a4aa6b34e32d7303366fe21124443e6cc867ec192a2f301410d09af687644dec.json
src/: channel_handlers.rs  event_handler.rs  flashy.rs  flashy_dialogs.rs  flashy_events.rs  flashy_services.rs  main.rs
src/models/: auth_dto.rs  login_register_dto.rs  mod.rs  profile.rs  recurrence.rs  recurrence_dto.rs  user.rs
src/services/: mod.rs  profile_services.rs  recurrence_services.rs  user_services.rs
